2004-11-12 Cory Meisch <cory.meisch@hp.com>
	* Removed printer entries laserjet_9040_9050 and 9040_9050_MFP

2004-11-03 Cory Meisch <cory.meisch@hp.com>
	* added HP-LaserJet_9040_MFP and HP-LaserJet_9050_MFP.

2004-10-27  Cory Meisch <cory.meisch@hp.com>
	* added the following printers: BIJ_1200, LJ_9040_9050_MFP, LJ_9040_9050, 
	LJ_4350, LJ_4250, LJ_2430, LJ_2420, LJ_2410, LJ_1320, LJ_1160, Deskjet_6800

2004-07-30  Till Kamppeter <till.kamppeter@gmx.net>

	* added new printer entries contributed by Cory Meisch: HP Deskjet
	  5740, 3840, 3740, Officejet 6200, 7200, 7300, 7400, Photosmart
	  2600, 2700, PSC 1600, 2350

	* opt/epkowa-laser-InputSlot.xml: Corrected default paper tray
	  for Epson Kowa laser printer driver "epkowa-laser".

2004-07-28  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-EPL-N2500.xml, printer/Epson-EPL-N2500PS.xml,
	  printer/Epson-AcuLaser_C4100.xml,
	  printer/Epson-AcuLaser_C4100PS.xml, driver/Postscript.xml,
	  driver/pxlmono.xml, driver/lj5gray.xml, driver/lj5mono.xml,
	  driver/ljet4.xml, opt/160.xml, opt/6.xml: Added new Epson laser
	  printers.

	* driver/epkowa-laser.xml, driver/alc*.xml, driver/epl*[0-9p].xml,
	  opt/2.xml, opt/145.xml, opt/159.xml. opt/epkowa-laser*.xml,
	  opt/eplXXXX*.xml: Replaced all the "alc*" and "epl*" driver
	  entries for the Epson Kowa laser printer driver by one
	  "epkowa-laser" driver entry, added new models.
	 
	* printer/Minolta-PagePro_1350W.xml: Raised rating to "Mostly", as
	  this printer is now directly supported by the "min12xxw" driver.
	
	* printer/Minolta-PagePro_1200W.xml,
	  printer/Minolta-PagePro_1300W.xml: Added the old winprinters
	  from Minolta.

	* driver/min12xxw, opt/min12xxw*.xml: Added Foomatic data for
	  the execution of the "min12xxw" driver.

2004-07-12  Grant Taylor  <gtaylor@linuxprinting.org>

	* Correct all broken pipermail archive links (there were only
	  two).

	* Clarify comment about foo2zjs ppd and driver data location.
