@@ -245,7 +245,7 @@
    <id>printer/HP-Business_Inkjet_2280</id>
   </printer>
   <printer>
-   <id>printer/hp_business_inkjet_2300</id>
+   <id>printer/HP-Business_Inkjet_2300</id>
   </printer>
   <printer>
    <id>printer/HP-Business_Inkjet_2600</id>
@@ -290,19 +290,19 @@
    <id>printer/HP-Color_LaserJet_8550GN</id><!-- HP Color LaserJet 8550GN -->
   </printer>
    <printer>
-   <id>printer/hp_color_LaserJet_2500</id>
+   <id>printer/HP-Color_LaserJet_2500</id>
   </printer>
     <printer>
-   <id>printer/hp_color_LaserJet_3700</id>
+   <id>printer/HP-Color_LaserJet_3700</id>
   </printer>
     <printer>
-   <id>printer/hp_color_LaserJet_4650</id>
+   <id>printer/HP-Color_LaserJet_4650</id>
   </printer>
     <printer>
-   <id>printer/hp_color_LaserJet_5500</id>
+   <id>printer/HP-Color_LaserJet_5500</id>
   </printer>
     <printer>
-   <id>printer/hp_color_LaserJet_9500_MFP</id>
+   <id>printer/HP-Color_LaserJet_9500_MFP</id>
   </printer>
   <printer>
    <id>printer/HP-DesignJet_2500CP</id><!-- HP DesignJet 2500CP -->
@@ -344,10 +344,7 @@
    <id>printer/HP-LaserJet_1220</id>
   </printer>
   <printer>
-   <id>printer/HP-LaserJet_1320_Series</id>
-  </printer>
-  <printer>
-   <id>printer/HP-LaserJet_2100_Series</id>
+   <id>printer/HP-LaserJet_1320</id>
   </printer>
   <printer>
    <id>printer/HP-LaserJet_2100M</id><!-- HP LaserJet 2100M -->
@@ -360,6 +357,9 @@
   </printer>
   <printer>
    <id>printer/HP-LaserJet_2420</id>
+  </printer>
+  <printer>
+   <id>printer/HP-LaserJet_2430</id>
   </printer>
   <printer>
    <id>printer/HP-LaserJet_3200</id>
@@ -437,23 +437,23 @@
   <printer>
    <id>printer/HP-LaserJet_9000</id>
   </printer>
-    <printer>
+  <printer>
    <id>printer/HP-LaserJet_9000_MFP</id>
   </printer>
- <printer>
-   <id>printer/hp_LaserJet_1300_series</id>
+  <printer>
+   <id>printer/HP-LaserJet_9040_MFP</id>
+  </printer>
+  <printer>
+   <id>printer/HP-LaserJet_9050_MFP</id>
+  </printer>
+  <printer>
+   <id>printer/HP-LaserJet_1300</id>
   </printer>  
   <printer>
-   <id>printer/hp_LaserJet_2300</id>
+   <id>printer/HP-LaserJet_2300</id>
   </printer>  
   <printer>
-   <id>printer/hp_LaserJet_3380</id>
-  </printer>  
-  <printer>
-   <id>printer/hp_LaserJet_4200_Series</id>
-  </printer>  
-  <printer>
-   <id>printer/hp_LaserJet_4300_Series</id>
+   <id>printer/HP-LaserJet_3380</id>
   </printer>  
   <printer>
    <id>printer/Heidelberg-Digimaster_9110</id><!-- Heidelberg Digimaster 9110 -->
