@@ -1,6 +1,6 @@
 <printer id="printer/HP-LaserJet_9000_MFP">
   <make>HP</make>
-  <model>LaserJet 9000_MFP</model>
+  <model>LaserJet 9000 MFP</model>
   <mechanism>
     <laser/><!--not "color"-->
     <resolution>
