@@ -1,6 +1,6 @@
 <printer id="printer/HP-LaserJet_9040_MFP">
   <make>HP</make>
-  <model>LaserJet _9040_MFP</model>
+  <model>LaserJet 9040 MFP</model>
   <mechanism>
     <laser/><!--not "color"-->
     <resolution>
