@@ -1,6 +1,6 @@
 <printer id="printer/HP-LaserJet_9050_MFP">
   <make>HP</make>
-  <model>LaserJet _9050_MFP</model>
+  <model>LaserJet 9050 MFP</model>
   <mechanism>
     <laser/><!--not "color"-->
     <resolution>
