@@ -1,3 +1,10 @@
+2004-11-17  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* driver/Postscript.xml, printer/HP-LaserJet_9040_MFP.xml,
+	  printer/HP-LaserJet_9050_MFP.xml,
+	  printer/HP-LaserJet_9000_MFP.xml: Done some corrections on
+	  Cory's contributions.
+
 2004-11-12 Cory Meisch <cory.meisch@hp.com>
 	* Removed printer entries laserjet_9040_9050 and 9040_9050_MFP
 
